Changelog
=========

2.3.1 (unreleased)
------------------

- Fixed tabs order results [cekk]


2.3.0 (2013-07-08)
------------------

- refactored view to support plone.app.search [cekk]
- moved configuration from site_properties to registry [cekk]
- added tests [cekk]
- customized "skip_links" viewlet for search view [cekk]

2.2.1 (2012-10-12)
------------------

- fixed indexes column population [cekk]


2.2.0 (2012-10-08)
------------------

- refactoring for Plone 4: now the template is removed and replaced by a view [cekk]


2.1.1 (2012-10-04)
------------------

- fixed update step [cekk]
- fixed first tab selection [cekk]


2.1.0 (2012-10-04)
------------------

- moved search from skins to a view, for Plone4 compatibility (it isn't new-search like yet) [cekk]
- added uninstall profile to remove skins [cekk]


2.0.2 (2012-08-23)
------------------

- fixed style for results [cekk]


2.0.1 (2012-08-03)
------------------

- removed search_form.pt [cekk]


2.0.0 (2012-08-02)
------------------

- cleanup old Plone 3.2 garbage [keul] 
- fixed search view styles [cekk]
- added configlet to manage sitesearch options [cekk]

1.5.1 (2012/04/23)
------------------

- added class to hidden indexes info div [cekk]
- fixed hidden indexes management [cekk]

1.5.0 (2012/04/16)
------------------

- refactoring sitesearch_view to speed up searches [cekk]

1.4.1 (2012/03/26)
------------------

- fix translation [cekk]

1.4.0 (2012/03/12)
------------------

- Customizzato indice Date per gli eventi [cekk]
- Ora vengono visualizzate le informazioni sulle date/luogo negli eventi [cekk]
- L'ordinamento per data viene effettuato per l'indice Date [cekk]
- Abilitata la gestione di indici "nascosti" che ci si può portare dietro durante la ricerca [cekk]

1.3.1 (2011/11/28)
------------------

- Fix errore nel titolo quando il path non è corretto (#329) [cekk]

1.3.0 (2011/11/28)
------------------

- Sistemata grafica e css [nekorin]

1.2.0 (2011/06/20)
------------------
